refactor(memory): Agent memory storage JSON -> Markdown(.md)
- File extension changed from .json to .md, consistent with Consumer memory system
- Format: Markdown unordered list with "# AgentName Agent 用户偏好" header
- Each line: "- key: value" for easy human reading and LLM parsing
- Jackson ObjectMapper dependency removed (pure string operations)
- Sample output file: data/users/{userId}/order-memory.md